--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,23 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Gonzalo Suarez">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
-  
+  <meta itemprop="image"
+    content="https://drive.google.com/file/d/1A5cLx-y5Q9wD4pZxY1_2aQBAJNnjx0fv/view?usp=sharing">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://suarezgonzalo.vercel.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Gonzalo Suarez | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
-  
+  <meta property="og:image"
+    content="https://drive.google.com/file/d/1A5cLx-y5Q9wD4pZxY1_2aQBAJNnjx0fv/view?usp=sharing">
+
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Gonzalo Suarez | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  
+  <meta name="twitter:image"
+    content="https://drive.google.com/file/d/1A5cLx-y5Q9wD4pZxY1_2aQBAJNnjx0fv/view?usp=sharing">
 </head>
 
 <body>
